--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ JWTPRIVATEKEY=EPICMail_jwtPrivatekey
 
 DB_USER=postgres
 DB_HOST=localhost
-DB_NAME=EPICMail_db
-DB_PASSWORD=#beneza1
+DB_NAME=epicmails_dev
+DB_PASSWORD=hello
 DB_PORT=5432
